<?xml version="1.0"?>
<package format="2">
  <name>mavros_maverick</name>
  <version>0.1.0</version>
  <description>
    Extra nodes and plugins for <a href="http://wiki.ros.org/mavros">MAVROS</a>.
  </description>

  <maintainer email="gregoire.linard@azurdrones.com">Gregoire Linard</maintainer>
  <author email="gregoire.linard@azurdrones.com">Gregoire Linard</author>
  <license>GPLv3</license>
  <license>LGPLv3</license>
  <license>BSD</license>

  <url type="repository">https://github.com/mavlink/mavros.git</url>
  <url type="bugtracker">https://github.com/mavlink/mavros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <depend>mavros</depend>
  <depend>roscpp</depend>
  <depend>mavros_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>

  <export>
    <mavros plugin="${prefix}/maverick_plugins.xml" />
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
