<?xml version="1.0"?>
<package format="2">
  <name>mavros_maverick</name>
  <version>0.1.0</version>
  <description>
    Extra nodes and plugins for <a href="http://wiki.ros.org/mavros">MAVROS</a>.
  </description>

  <maintainer email="gregoire.linard@azurdrones.com">Gregoire Linard</maintainer>
  <author email="gregoire.linard@azurdrones.com">Gregoire Linard</author>
  <license>GPLv3</license>
  <license>LGPLv3</license>
  <license>BSD</license>

  <url type="repository">https://github.com/mavlink/mavros.git</url>
  <url type="bugtracker">https://github.com/mavlink/mavros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>mavros</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <mavros plugin="${prefix}/maverick_plugins.xml" />
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
